@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  14 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Changed runscript.sh to store it's services to restart like rc.
+
 * baselayout-1.12.0_pre14 (13 Jan 2006)
 
   13 Jan 2006; Mike Frysinger <vapier@gentoo.org>:
